--- a/index.html
+++ b/index.html
@@ -6,7 +6,10 @@
     <title>WEBSTUDIO</title>
     <link
       rel="stylesheet"
-      href="node_modules/modern-normalize/modern-normalize.css"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/2.0.0/modern-normalize.min.css"
+      integrity="sha512-4xo8blKMVCiXpTaLzQSLSw3KFOVPWhm/TRtuPVc4WG6kUgjH6J03IBuG7JZPkcWMxJ5huwaBpOpnwYElP/m6wg=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
     />
 
     <link rel="stylesheet" href="./css/styles.css" />
@@ -54,7 +57,7 @@
     </header>
     <main>
       <section class="ferst-page">
-        <div class="fon">
+        <div class="fon-ferst">
           <div class="container">
             <h1 id="logo" class="ferst-title">
               Effective Solutions for Your Business
@@ -67,7 +70,7 @@
       </section>
       <section class="second-page">
         <div class="container">
-          <h2 class="second-title">Advantage and style</h2>
+          <h2 class="item-hidden">Advantage and style</h2>
           <ul class="second-link">
             <li class="link-paragraph">
               <h3 class="third-title-left">Strategy</h3>
@@ -101,110 +104,139 @@
         </div>
       </section>
       <section class="third-page">
-        <div class="container">
-          <h2 class="second-title">Our Team</h2>
-          <ul>
-            <li class="list">
-              <img
-                src="./images/img-3.jpg"
-                alt="men"
-                width="264"
-                height="260"
-              />
-              <h3 class="third-title">Mark Guerrero</h3>
-              <p class="paragraph-center">Product Designer</p>
-            </li>
-            <li class="list">
-              <img
-                src="./images/img-2.jpg"
-                alt="men"
-                width="264"
-                height="260"
-              />
-              <h3 class="third-title">Tom Ford</h3>
-              <p class="paragraph-center">Frontend Developer</p>
-            </li>
-            <li class="list">
-              <img
-                src="./images/img-1.jpg"
-                alt="men"
-                width="264"
-                height="260"
-              />
-              <h3 class="third-title">Camila Garcia</h3>
-              <p class="paragraph-center">Marketing</p>
-            </li>
-            <li class="list">
-              <img src="./images/img.jpg" alt="men" width="264" height="260" />
-              <h3 class="third-title">Daniel Wilson</h3>
-              <p class="paragraph-center">UI Designer</p>
-            </li>
-          </ul>
+        <div class="fon-third">
+          <div class="container">
+            <div class="third-content">
+              <h2 class="second-title">Our Team</h2>
+              <ul class="card-list">
+                <li class="list">
+                  <img
+                    src="./images/img-3.jpg"
+                    alt="men"
+                    width="264"
+                    height="260"
+                  />
+                  <div class="card-text">
+                    <h3 class="third-title">Mark Guerrero</h3>
+                    <p class="paragraph-center">Product Designer</p>
+                  </div>
+                </li>
+                <li class="list">
+                  <img
+                    src="./images/img-2.jpg"
+                    alt="men"
+                    width="264"
+                    height="260"
+                  />
+                  <div class="card-text">
+                    <h3 class="third-title">Tom Ford</h3>
+                    <p class="paragraph-center">Frontend Developer</p>
+                  </div>
+                </li>
+                <li class="list">
+                  <img
+                    src="./images/img-1.jpg"
+                    alt="men"
+                    width="264"
+                    height="260"
+                  />
+                  <div class="card-text">
+                    <h3 class="third-title">Camila Garcia</h3>
+                    <p class="paragraph-center">Marketing</p>
+                  </div>
+                </li>
+                <li class="list">
+                  <img
+                    src="./images/img.jpg"
+                    alt="men"
+                    width="264"
+                    height="260"
+                  />
+                  <div class="card-text">
+                    <h3 class="third-title">Daniel Wilson</h3>
+                    <p class="paragraph-center">UI Designer</p>
+                  </div>
+                </li>
+              </ul>
+            </div>
+          </div>
         </div>
       </section>
       <section class="fourth-page">
         <div class="container">
           <h2 class="second-title">Our Portfolio</h2>
-          <ul>
-            <li>
+          <ul class="fourth-link">
+            <li class="card-fourth">
               <img
                 src="./images/portfolio/img-5.jpg"
                 alt="photo"
                 width="360"
                 height="300"
               />
-              <h3 class="third-title-left">Banking App</h3>
-              <p class="paragraph-left">App</p>
+              <div class="fourth-content">
+                <h3 class="third-title-left">Banking App</h3>
+                <p class="paragraph-left">App</p>
+              </div>
             </li>
-            <li>
+            <li class="card-fourth">
               <img
                 src="./images/portfolio/img-4.jpg"
                 alt="photo"
                 width="360"
                 height="300"
               />
-              <h3 class="third-title-left">Cashless Payment</h3>
-              <p class="paragraph-left">Marketing</p>
+              <div class="fourth-content">
+                <h3 class="third-title-left">Cashless Payment</h3>
+                <p class="paragraph-left">Marketing</p>
+              </div>
             </li>
-            <li>
+            <li class="card-fourth">
               <img
                 src="./images/portfolio/img-3.jpg"
                 alt="photo"
                 width="360"
                 height="300"
               />
-              <h3 class="third-title-left">Meditation App</h3>
-              <p class="paragraph-left">App</p>
+              <div class="fourth-content">
+                <h3 class="third-title-left">Meditation App</h3>
+                <p class="paragraph-left">App</p>
+              </div>
             </li>
-            <li>
+            <li class="card-fourth">
               <img
                 src="./images/portfolio/img-2.jpg"
                 alt="photo"
                 width="360"
                 height="300"
               />
-              <h3 class="third-title-left">Taxi Service</h3>
-              <p class="paragraph-left">Marketing</p>
+              <div class="fourth-content">
+                <h3 class="third-title-left">Taxi Service</h3>
+                <p class="paragraph-left">Marketing</p>
+              </div>
             </li>
-            <li>
+            <li class="card-fourth">
               <img
                 src="./images/portfolio/img-1.jpg"
                 alt="photo"
                 width="360"
                 height="300"
               />
-              <h3 class="third-title-left">Screen Illustrations</h3>
-              <p class="paragraph-left">Design</p>
+              <div class="fourth-content">
+                <h3 class="third-title-left">Screen Illustrations</h3>
+                <p class="paragraph-left">Design</p>
+              </div>
             </li>
-            <li>
+            <li class="card-fourth">
               <img
                 src="./images/portfolio/img.jpg"
                 alt="photo"
                 width="360"
                 height="300"
               />
-              <h3 class="third-title-left">Online Courses</h3>
-              <p class="paragraph-left">Marketing</p>
+              <div class="fourth-content">
+                <h3 class="third-title-left">Online Courses</h3>
+                <p class="paragraph-left">Marketing</p>
+              </div>
             </li>
           </ul>
         </div>
@@ -212,13 +244,15 @@
     </main>
     <footer class="footer">
       <div class="container">
-        <a class="logo-footer" href="./index.html"
-          >Wed<span class="accent-footer">Studio</span></a
-        >
-        <p class="paragraph-footer">
-          Increase the flow of customers and sales for your business with
-          digital marketing & growth solutions.
-        </p>
+        <div class="footer-content">
+          <a class="logo-footer" href="./index.html"
+            >Wed<span class="accent-footer">Studio</span></a
+          >
+          <p class="paragraph-footer">
+            Increase the flow of customers and sales for your business with
+            digital marketing & growth solutions.
+          </p>
+        </div>
       </div>
     </footer>
   </body>
