--- a/index.html
+++ b/index.html
@@ -26,33 +26,31 @@
   </head>
   <body>
     <header class="page-header">
-      <div class="container">
-        <div class="wrap">
-          <nav class="navigation">
-            <a class="header-logo" href="./index.html"
-              >Wed<span class="accent">Studio</span></a
-            >
-            <ul class="header-menu-list">
-              <li><a class="link-page" href="./index.html">Studio</a></li>
-              <li><a class="link-page" href="">Portfolio</a></li>
-              <li><a class="link-page" href="">Contacts</a></li>
-            </ul>
-          </nav>
-          <address class="address">
-            <ul class="address-link">
-              <li class="contacts">
-                <a class="link-contact" href="mailto:info@devstudio.com"
-                  >info@devstudio.com</a
-                >
-              </li>
-              <li class="contacts">
-                <a class="link-contact" href="tel:+110001111111"
-                  >+11 (000) 111-11-11</a
-                >
-              </li>
-            </ul>
-          </address>
-        </div>
+      <div class="container flex">
+        <nav class="navigation">
+          <a class="header-logo" href="./index.html"
+            >Wed<span class="accent">Studio</span></a
+          >
+          <ul class="header-menu-list">
+            <li><a class="link-page" href="./index.html">Studio</a></li>
+            <li><a class="link-page" href="">Portfolio</a></li>
+            <li><a class="link-page" href="">Contacts</a></li>
+          </ul>
+        </nav>
+        <address class="address">
+          <ul class="address-link">
+            <li class="contacts">
+              <a class="link-contact" href="mailto:info@devstudio.com"
+                >info@devstudio.com</a
+              >
+            </li>
+            <li class="contacts">
+              <a class="link-contact" href="tel:+110001111111"
+                >+11 (000) 111-11-11</a
+              >
+            </li>
+          </ul>
+        </address>
       </div>
     </header>
     <main>
