--- a/index.html
+++ b/index.html
@@ -99,59 +99,52 @@
       </section>
       <section class="third-page">
         <div class="container">
-          <div class="third-content">
-            <h2 class="second-title">Our Team</h2>
-            <ul class="card-list">
-              <li class="list">
-                <img
-                  src="./images/img-3.jpg"
-                  alt="men"
-                  width="264"
-                  height="260"
-                />
-                <div class="card-text">
-                  <h3 class="third-title">Mark Guerrero</h3>
-                  <p class="paragraph-center">Product Designer</p>
-                </div>
-              </li>
-              <li class="list">
-                <img
-                  src="./images/img-2.jpg"
-                  alt="men"
-                  width="264"
-                  height="260"
-                />
-                <div class="card-text">
-                  <h3 class="third-title">Tom Ford</h3>
-                  <p class="paragraph-center">Frontend Developer</p>
-                </div>
-              </li>
-              <li class="list">
-                <img
-                  src="./images/img-1.jpg"
-                  alt="men"
-                  width="264"
-                  height="260"
-                />
-                <div class="card-text">
-                  <h3 class="third-title">Camila Garcia</h3>
-                  <p class="paragraph-center">Marketing</p>
-                </div>
-              </li>
-              <li class="list">
-                <img
-                  src="./images/img.jpg"
-                  alt="men"
-                  width="264"
-                  height="260"
-                />
-                <div class="card-text">
-                  <h3 class="third-title">Daniel Wilson</h3>
-                  <p class="paragraph-center">UI Designer</p>
-                </div>
-              </li>
-            </ul>
-          </div>
+          <h2 class="second-title">Our Team</h2>
+          <ul class="card-list">
+            <li class="list">
+              <img
+                src="./images/img-3.jpg"
+                alt="men"
+                width="264"
+                height="260"
+              />
+              <div class="card-text">
+                <h3 class="third-title">Mark Guerrero</h3>
+                <p class="paragraph-center">Product Designer</p>
+              </div>
+            </li>
+            <li class="list">
+              <img
+                src="./images/img-2.jpg"
+                alt="men"
+                width="264"
+                height="260"
+              />
+              <div class="card-text">
+                <h3 class="third-title">Tom Ford</h3>
+                <p class="paragraph-center">Frontend Developer</p>
+              </div>
+            </li>
+            <li class="list">
+              <img
+                src="./images/img-1.jpg"
+                alt="men"
+                width="264"
+                height="260"
+              />
+              <div class="card-text">
+                <h3 class="third-title">Camila Garcia</h3>
+                <p class="paragraph-center">Marketing</p>
+              </div>
+            </li>
+            <li class="list">
+              <img src="./images/img.jpg" alt="men" width="264" height="260" />
+              <div class="card-text">
+                <h3 class="third-title">Daniel Wilson</h3>
+                <p class="paragraph-center">UI Designer</p>
+              </div>
+            </li>
+          </ul>
         </div>
       </section>
       <section class="fourth-page">
