--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
           </ul>
         </nav>
         <address class="address">
-          <ul class="address-link">
+          <ul class="header-menu-list">
             <li class="contacts">
               <a class="link-contact" href="mailto:info@devstudio.com"
                 >info@devstudio.com</a
