--- a/index.html
+++ b/index.html
@@ -32,9 +32,15 @@
             >Wed<span class="accent">Studio</span></a
           >
           <ul class="header-menu-list">
-            <li><a class="link-page" href="./index.html">Studio</a></li>
-            <li><a class="link-page" href="">Portfolio</a></li>
-            <li><a class="link-page" href="">Contacts</a></li>
+            <li class="header-menu-item">
+              <a class="link-page" href="./index.html">Studio</a>
+            </li>
+            <li class="header-menu-item">
+              <a class="link-page" href="">Portfolio</a>
+            </li>
+            <li class="header-menu-item">
+              <a class="link-page" href="">Contacts</a>
+            </li>
           </ul>
         </nav>
         <address class="address">
@@ -67,6 +73,11 @@
           <h2 class="item-hidden">Advantage and style</h2>
           <ul class="second-link">
             <li class="link-paragraph">
+              <div class="icon-features">
+                <svg class="icon-features-item" width="64" height="64">
+                  <use href="./images/icons.svg#icon-antenna"></use>
+                </svg>
+              </div>
               <h3 class="third-title-left">Strategy</h3>
               <p class="paragraph-left">
                 Our goal is to identify the business problem to walk away with
@@ -74,6 +85,11 @@
               </p>
             </li>
             <li class="link-paragraph">
+              <div class="icon-features">
+                <svg class="icon-features-item" width="64" height="64">
+                  <use href="./images/icons.svg#icon-clock"></use>
+                </svg>
+              </div>
               <h3 class="third-title-left">Punctuality</h3>
               <p class="paragraph-left">
                 Bring the key message to the brand's audience for the best price
@@ -81,6 +97,11 @@
               </p>
             </li>
             <li class="link-paragraph">
+              <div class="icon-features">
+                <svg class="icon-features-item" width="64" height="64">
+                  <use href="./images/icons.svg#icon-diagram"></use>
+                </svg>
+              </div>
               <h3 class="third-title-left">Diligence</h3>
               <p class="paragraph-left">
                 Research and confirm brands that present the strongest digital
@@ -88,6 +109,11 @@
               </p>
             </li>
             <li class="link-paragraph">
+              <div class="icon-features">
+                <svg class="icon-features-item" width="64" height="64">
+                  <use href="./images/icons.svg#icon-astronaut"></use>
+                </svg>
+              </div>
               <h3 class="third-title-left">Technologies</h3>
               <p class="paragraph-left">
                 Design practice focused on digital experiences. We bring forth a
@@ -110,7 +136,43 @@
               />
               <div class="card-text">
                 <h3 class="third-title">Mark Guerrero</h3>
-                <p class="paragraph-center">Product Designer</p>
+                <p class="team-title">Product Designer</p>
+                <ul class="social-link-team">
+                  <li class="social-link-item">
+                    <a href="" class="icon-link">
+                      <svg class="icon-icon" width="16" height="16">
+                        <use
+                          xlink:href="./images/icons.svg#icon-instagram"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-link-item">
+                    <a href="" class="icon-link">
+                      <svg class="icon-icon" width="16" height="16">
+                        <use xlink:href="./images/icons.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-link-item">
+                    <a href="" class="icon-link">
+                      <svg class="icon-icon" width="16" height="16">
+                        <use
+                          xlink:href="./images/icons.svg#icon-facebook"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-link-item">
+                    <a href="" class="icon-link">
+                      <svg class="icon-icon" width="16" height="16">
+                        <use
+                          xlink:href="./images/icons.svg#icon-linkedin"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="list">
@@ -122,7 +184,43 @@
               />
               <div class="card-text">
                 <h3 class="third-title">Tom Ford</h3>
-                <p class="paragraph-center">Frontend Developer</p>
+                <p class="team-title">Frontend Developer</p>
+                <ul class="social-link-team">
+                  <li class="social-link-item">
+                    <a href="" class="icon-link">
+                      <svg class="icon-icon" width="16" height="16">
+                        <use
+                          xlink:href="./images/icons.svg#icon-instagram"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-link-item">
+                    <a href="" class="icon-link">
+                      <svg class="icon-icon" width="16" height="16">
+                        <use xlink:href="./images/icons.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-link-item">
+                    <a href="" class="icon-link">
+                      <svg class="icon-icon" width="16" height="16">
+                        <use
+                          xlink:href="./images/icons.svg#icon-facebook"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-link-item">
+                    <a href="" class="icon-link">
+                      <svg class="icon-icon" width="16" height="16">
+                        <use
+                          xlink:href="./images/icons.svg#icon-linkedin"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="list">
@@ -134,14 +232,86 @@
               />
               <div class="card-text">
                 <h3 class="third-title">Camila Garcia</h3>
-                <p class="paragraph-center">Marketing</p>
+                <p class="team-title">Marketing</p>
+                <ul class="social-link-team">
+                  <li class="social-link-item">
+                    <a href="" class="icon-link">
+                      <svg class="icon-icon" width="16" height="16">
+                        <use
+                          xlink:href="./images/icons.svg#icon-instagram"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-link-item">
+                    <a href="" class="icon-link">
+                      <svg class="icon-icon" width="16" height="16">
+                        <use xlink:href="./images/icons.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-link-item">
+                    <a href="" class="icon-link">
+                      <svg class="icon-icon" width="16" height="16">
+                        <use
+                          xlink:href="./images/icons.svg#icon-facebook"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-link-item">
+                    <a href="" class="icon-link">
+                      <svg class="icon-icon" width="16" height="16">
+                        <use
+                          xlink:href="./images/icons.svg#icon-linkedin"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="list">
               <img src="./images/img.jpg" alt="men" width="264" height="260" />
               <div class="card-text">
                 <h3 class="third-title">Daniel Wilson</h3>
-                <p class="paragraph-center">UI Designer</p>
+                <p class="team-title">UI Designer</p>
+                <ul class="social-link-team">
+                  <li class="social-link-item">
+                    <a href="" class="icon-link">
+                      <svg class="icon-icon" width="16" height="16">
+                        <use
+                          xlink:href="./images/icons.svg#icon-instagram"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-link-item">
+                    <a href="" class="icon-link">
+                      <svg class="icon-icon" width="16" height="16">
+                        <use xlink:href="./images/icons.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-link-item">
+                    <a href="" class="icon-link">
+                      <svg class="icon-icon" width="16" height="16">
+                        <use
+                          xlink:href="./images/icons.svg#icon-facebook"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-link-item">
+                    <a href="" class="icon-link">
+                      <svg class="icon-icon" width="16" height="16">
+                        <use
+                          xlink:href="./images/icons.svg#icon-linkedin"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
           </ul>
@@ -152,72 +322,115 @@
           <h2 class="second-title">Our Portfolio</h2>
           <ul class="fourth-link">
             <li class="card-fourth">
-              <img
-                src="./images/portfolio/img-5.jpg"
-                alt="photo"
-                width="360"
-                height="300"
-              />
+              <div class="main-wrap">
+                <img
+                  src="./images/portfolio/img-5.jpg"
+                  alt="photo"
+                  width="360"
+                  height="300"
+                />
+                <p class="main-cover">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
               <div class="fourth-content">
                 <h3 class="third-title-left">Banking App</h3>
                 <p class="paragraph-left">App</p>
               </div>
             </li>
             <li class="card-fourth">
-              <img
-                src="./images/portfolio/img-4.jpg"
-                alt="photo"
-                width="360"
-                height="300"
-              />
+              <div class="main-wrap">
+                <img
+                  src="./images/portfolio/img-4.jpg"
+                  alt="photo"
+                  width="360"
+                  height="300"
+                />
+                <p class="main-cover">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
               <div class="fourth-content">
                 <h3 class="third-title-left">Cashless Payment</h3>
                 <p class="paragraph-left">Marketing</p>
               </div>
             </li>
             <li class="card-fourth">
-              <img
-                src="./images/portfolio/img-3.jpg"
-                alt="photo"
-                width="360"
-                height="300"
-              />
+              <div class="main-wrap">
+                <img
+                  src="./images/portfolio/img-3.jpg"
+                  alt="photo"
+                  width="360"
+                  height="300"
+                />
+                <p class="main-cover">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
               <div class="fourth-content">
                 <h3 class="third-title-left">Meditation App</h3>
                 <p class="paragraph-left">App</p>
               </div>
             </li>
             <li class="card-fourth">
-              <img
-                src="./images/portfolio/img-2.jpg"
-                alt="photo"
-                width="360"
-                height="300"
-              />
+              <div class="main-wrap">
+                <img
+                  src="./images/portfolio/img-2.jpg"
+                  alt="photo"
+                  width="360"
+                  height="300"
+                />
+                <p class="main-cover">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
               <div class="fourth-content">
                 <h3 class="third-title-left">Taxi Service</h3>
                 <p class="paragraph-left">Marketing</p>
               </div>
             </li>
             <li class="card-fourth">
-              <img
-                src="./images/portfolio/img-1.jpg"
-                alt="photo"
-                width="360"
-                height="300"
-              />
+              <div class="main-wrap">
+                <img
+                  src="./images/portfolio/img-1.jpg"
+                  alt="photo"
+                  width="360"
+                  height="300"
+                />
+                <p class="main-cover">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
               <div class="fourth-content">
                 <h3 class="third-title-left">Screen Illustrations</h3>
                 <p class="paragraph-left">Design</p>
               </div>
             </li>
+
             <li class="card-fourth">
-              <img
-                src="./images/portfolio/img.jpg"
-                alt="photo"
-                width="360"
-                height="300"
-              />
+              <div class="main-wrap">
+                <img
+                  src="./images/portfolio/img.jpg"
+                  alt="photo"
+                  width="360"
+                  height="300"
+                />
+                <p class="main-cover">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
               <div class="fourth-content">
                 <h3 class="third-title-left">Online Courses</h3>
                 <p class="paragraph-left">Marketing</p>
@@ -228,14 +441,49 @@
       </section>
     </main>
     <footer class="footer">
-      <div class="container">
-        <a class="logo-footer" href="./index.html"
-          >Wed<span class="accent-footer">Studio</span></a
-        >
-        <p class="paragraph-footer">
-          Increase the flow of customers and sales for your business with
-          digital marketing & growth solutions.
-        </p>
+      <div class="container footer-flex">
+        <div class="footer-logo">
+          <a class="logo-footer" href="./index.html"
+            >Wed<span class="accent-footer">Studio</span></a
+          >
+          <p class="paragraph-footer">
+            Increase the flow of customers and sales for your business with
+            digital marketing & growth solutions.
+          </p>
+        </div>
+        <div class="footer-wrap">
+          <p class="footer-text">Social media</p>
+          <ul class="icon-list-footer">
+            <li class="icon-item-footer">
+              <a href="" class="icon-link-footer">
+                <svg class="icon-icon-footer" width="24" height="24">
+                  <use href="./images/icons.svg#icon-instagram"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="icon-item-footer">
+              <a href="" class="icon-link-footer">
+                <svg class="icon-icon-footer" width="24" height="24">
+                  <use href="./images/icons.svg#icon-twitter"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="icon-item-footer">
+              <a href="" class="icon-link-footer">
+                <svg class="icon-icon-footer" width="24" height="24">
+                  <use href="./images/icons.svg#icon-facebook"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="icon-item-footer">
+              <a href="" class="icon-link-footer">
+                <svg class="icon-icon-footer" width="24" height="24">
+                  <use href="./images/icons.svg#icon-linkedin"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
+        </div>
       </div>
     </footer>
   </body>
