--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     />
   </head>
   <body>
-    <header class="page-header">
+    <header class="header">
       <div class="container flex">
         <nav class="navigation">
           <a class="header-logo" href="./index.html"
@@ -141,34 +141,28 @@
                   <li class="social-link-item">
                     <a href="" class="icon-link">
                       <svg class="icon-icon" width="16" height="16">
-                        <use
-                          xlink:href="./images/icons.svg#icon-instagram"
-                        ></use>
+                        <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-link-item">
                     <a href="" class="icon-link">
                       <svg class="icon-icon" width="16" height="16">
-                        <use xlink:href="./images/icons.svg#icon-twitter"></use>
+                        <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-link-item">
                     <a href="" class="icon-link">
                       <svg class="icon-icon" width="16" height="16">
-                        <use
-                          xlink:href="./images/icons.svg#icon-facebook"
-                        ></use>
+                        <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-link-item">
                     <a href="" class="icon-link">
                       <svg class="icon-icon" width="16" height="16">
-                        <use
-                          xlink:href="./images/icons.svg#icon-linkedin"
-                        ></use>
+                        <use href="./images/icons.svg#icon-linkedin"></use>
                       </svg>
                     </a>
                   </li>
@@ -189,34 +183,28 @@
                   <li class="social-link-item">
                     <a href="" class="icon-link">
                       <svg class="icon-icon" width="16" height="16">
-                        <use
-                          xlink:href="./images/icons.svg#icon-instagram"
-                        ></use>
+                        <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-link-item">
                     <a href="" class="icon-link">
                       <svg class="icon-icon" width="16" height="16">
-                        <use xlink:href="./images/icons.svg#icon-twitter"></use>
+                        <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-link-item">
                     <a href="" class="icon-link">
                       <svg class="icon-icon" width="16" height="16">
-                        <use
-                          xlink:href="./images/icons.svg#icon-facebook"
-                        ></use>
+                        <use :href="./images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-link-item">
                     <a href="" class="icon-link">
                       <svg class="icon-icon" width="16" height="16">
-                        <use
-                          xlink:href="./images/icons.svg#icon-linkedin"
-                        ></use>
+                        <use href="./images/icons.svg#icon-linkedin"></use>
                       </svg>
                     </a>
                   </li>
@@ -237,34 +225,28 @@
                   <li class="social-link-item">
                     <a href="" class="icon-link">
                       <svg class="icon-icon" width="16" height="16">
-                        <use
-                          xlink:href="./images/icons.svg#icon-instagram"
-                        ></use>
+                        <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-link-item">
                     <a href="" class="icon-link">
                       <svg class="icon-icon" width="16" height="16">
-                        <use xlink:href="./images/icons.svg#icon-twitter"></use>
+                        <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-link-item">
                     <a href="" class="icon-link">
                       <svg class="icon-icon" width="16" height="16">
-                        <use
-                          xlink:href="./images/icons.svg#icon-facebook"
-                        ></use>
+                        <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-link-item">
                     <a href="" class="icon-link">
                       <svg class="icon-icon" width="16" height="16">
-                        <use
-                          xlink:href="./images/icons.svg#icon-linkedin"
-                        ></use>
+                        <use href="./images/icons.svg#icon-linkedin"></use>
                       </svg>
                     </a>
                   </li>
@@ -280,34 +262,28 @@
                   <li class="social-link-item">
                     <a href="" class="icon-link">
                       <svg class="icon-icon" width="16" height="16">
-                        <use
-                          xlink:href="./images/icons.svg#icon-instagram"
-                        ></use>
+                        <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-link-item">
                     <a href="" class="icon-link">
                       <svg class="icon-icon" width="16" height="16">
-                        <use xlink:href="./images/icons.svg#icon-twitter"></use>
+                        <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-link-item">
                     <a href="" class="icon-link">
                       <svg class="icon-icon" width="16" height="16">
-                        <use
-                          xlink:href="./images/icons.svg#icon-facebook"
-                        ></use>
+                        <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-link-item">
                     <a href="" class="icon-link">
                       <svg class="icon-icon" width="16" height="16">
-                        <use
-                          xlink:href="./images/icons.svg#icon-linkedin"
-                        ></use>
+                        <use href="./images/icons.svg#icon-linkedin"></use>
                       </svg>
                     </a>
                   </li>
