--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
           >
           <ul class="header-menu-list">
             <li class="header-menu-item">
-              <a class="link-page" href="./index.html">Studio</a>
+              <a class="link-page studio" href="./index.html">Studio</a>
             </li>
             <li class="header-menu-item">
               <a class="link-page" href="">Portfolio</a>
@@ -46,12 +46,12 @@
         <address class="address">
           <ul class="header-menu-list">
             <li class="contacts">
-              <a class="link-contact" href="mailto:info@devstudio.com"
+              <a class="link-contact email" href="mailto:info@devstudio.com"
                 >info@devstudio.com</a
               >
             </li>
             <li class="contacts">
-              <a class="link-contact" href="tel:+110001111111"
+              <a class="link-contact phone-number" href="tel:+110001111111"
                 >+11 (000) 111-11-11</a
               >
             </li>
