--- a/index.html
+++ b/index.html
@@ -26,34 +26,34 @@
   </head>
   <body>
     <header class="header">
-      <div class="container flex">
+      <div class="container header-container">
         <nav class="navigation">
-          <a class="header-logo" href="./index.html"
-            >Wed<span class="accent">Studio</span></a
+          <a class="logo" href="./index.html"
+            >Web<span class="accent">Studio</span></a
           >
-          <ul class="header-menu-list">
-            <li class="header-menu-item">
-              <a class="link-page studio" href="./index.html">Studio</a>
+          <ul class="nav-list">
+            <li class="nav-iteam">
+              <a class="nav-iteam-link studio" href="./index.html"> Studio </a>
             </li>
-            <li class="header-menu-item">
-              <a class="link-page" href="">Portfolio</a>
+            <li class="nav-iteam">
+              <a class="nav-iteam-link" href=""> Portfolio </a>
             </li>
-            <li class="header-menu-item">
-              <a class="link-page" href="">Contacts</a>
+            <li class="nav-iteam">
+              <a class="nav-iteam-link" href=""> Contacts </a>
             </li>
           </ul>
         </nav>
         <address class="address">
-          <ul class="header-menu-list">
-            <li class="contacts">
-              <a class="link-contact email" href="mailto:info@devstudio.com"
-                >info@devstudio.com</a
-              >
+          <ul class="address-list">
+            <li>
+              <a class="address-iteam email" href="mailto:info@devstudio.com">
+                info@devstudio.com
+              </a>
             </li>
-            <li class="contacts">
-              <a class="link-contact phone-number" href="tel:+110001111111"
-                >+11 (000) 111-11-11</a
-              >
+            <li>
+              <a class="adress-iteam phone-number" href="tel:+110001111111">
+                +11 (000) 111-11-11
+              </a>
             </li>
           </ul>
         </address>
