--- a/index.html
+++ b/index.html
@@ -46,12 +46,12 @@
         <address class="address">
           <ul class="address-list">
             <li>
-              <a class="address-iteam email" href="mailto:info@devstudio.com">
+              <a class="nav-iteam-link email" href="mailto:info@devstudio.com">
                 info@devstudio.com
               </a>
             </li>
             <li>
-              <a class="adress-iteam phone-number" href="tel:+110001111111">
+              <a class="nav-iteam-link phone-number" href="tel:+110001111111">
                 +11 (000) 111-11-11
               </a>
             </li>
