--- a/index.html
+++ b/index.html
@@ -45,13 +45,13 @@
         </nav>
         <address class="address">
           <ul class="address-list">
-            <li>
-              <a class="nav-iteam-link email" href="mailto:info@devstudio.com">
+            <li class="header-address-item>
+              <a class="address-iteam email" href="mailto:info@devstudio.com">
                 info@devstudio.com
               </a>
             </li>
-            <li>
-              <a class="nav-iteam-link phone-number" href="tel:+110001111111">
+            <li class="header-address-item>
+              <a class="address-iteam phone-number" href="tel:+110001111111">
                 +11 (000) 111-11-11
               </a>
             </li>
