--- a/index.html
+++ b/index.html
@@ -27,33 +27,33 @@
   <body>
     <header class="header">
       <div class="container header-container">
-        <nav class="navigation">
-          <a class="logo" href="./index.html"
+        <nav class="nav">
+          <a href="./index.html" class="header-title"
             >Web<span class="accent">Studio</span></a
           >
-          <ul class="nav-list">
-            <li class="nav-iteam">
-              <a class="nav-iteam-link studio" href="./index.html"> Studio </a>
+          <ul class="header-menu-list">
+            <li class="header-menu-item">
+              <a class="header-menu-link studio" href="./index.html">Studio</a>
             </li>
-            <li class="nav-iteam">
-              <a class="nav-iteam-link" href=""> Portfolio </a>
+            <li class="header-menu-item">
+              <a class="header-menu-link" href="">Portfolio</a>
             </li>
-            <li class="nav-iteam">
-              <a class="nav-iteam-link" href=""> Contacts </a>
+            <li class="header-menu-item">
+              <a class="header-menu-link" href="">Contacts</a>
             </li>
           </ul>
         </nav>
-        <address class="address">
-          <ul class="address-list">
-            <li class="header-address-item>
-              <a class="address-iteam email" href="mailto:info@devstudio.com">
-                info@devstudio.com
-              </a>
+        <address class="header-address">
+          <ul class="header-address-link">
+            <li class="header-address-item">
+              <a class="header-address-text" href="mailto:info@devstudio.com"
+                >info@devstudio.com</a
+              >
             </li>
-            <li class="header-address-item>
-              <a class="address-iteam phone-number" href="tel:+110001111111">
-                +11 (000) 111-11-11
-              </a>
+            <li class="header-address-item">
+              <a class="header-address-text" href="tel:+110001111111"
+                >+11 (000) 111-11-11</a
+              >
             </li>
           </ul>
         </address>
