--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
                   <li class="social-link-item">
                     <a href="" class="icon-link">
                       <svg class="icon-icon" width="16" height="16">
-                        <use :href="./images/icons.svg#icon-facebook"></use>
+                        <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
