--- a/index.html
+++ b/index.html
@@ -460,7 +460,126 @@
             </li>
           </ul>
         </div>
+        <div class="footer-subscribe">
+          <p class="subscribe">Subscribe</p>
+          <form class="subs-form">
+            <label class="subs-form-label">
+              <input
+                type="email"
+                name="email"
+                id="email"
+                class="footer-input-email"
+                placeholder="E-mail"
+              />
+            </label>
+            <button type="submit" class="footer-button-subs">
+              Subscribe
+              <svg class="telega-icons" width="24" height="24">
+                <use href="./images/icons2.svg#icon-telegram"></use>
+              </svg>
+            </button>
+          </form>
+        </div>
       </div>
     </footer>
+
+    <div class="modal-overlay is-open">
+      <div class="modal">
+        <button class="exit-button" type="button">
+          <svg class="exit-icon" width="8" height="8">
+            <use href="./images/icons2.svg#icon-close"></use>
+          </svg>
+        </button>
+        <p class="window-titel">
+          Leave your contacts and we will call you back
+        </p>
+
+        <form
+          class="form"
+          name="customers_contacts"
+          autocomplete="off"
+          novalidate
+        >
+          <div class="form-field">
+            <label class="form-label" for="user-name">Name</label>
+            <div class="form-input-wrap">
+              <input
+                class="form-input"
+                type="text"
+                name="user-name"
+                placeholder=""
+                minlength="2"
+                id="user-name"
+              />
+              <svg class="form-icon" width="18" height="24">
+                <use href="./images/icons2.svg#icon-person"></use>
+              </svg>
+            </div>
+          </div>
+
+          <div class="form-field">
+            <label class="form-label" for="user_tel">Phone</label>
+            <div class="form-input-wrap">
+              <input
+                class="form-input"
+                type="tel"
+                name="user_tel"
+                id="user_tel"
+              />
+              <svg class="form-icon" width="18" height="24">
+                <use href="./images/icons2.svg#icon-phone"></use>
+              </svg>
+            </div>
+          </div>
+
+          <div class="form-field">
+            <label class="form-label" for="user_email">Email</label>
+            <div class="form-input-wrap">
+              <input
+                class="form-input"
+                type="email"
+                name="user_email"
+                id="user_email"
+              />
+              <svg class="form-icon" width="18" height="24">
+                <use href="./images/icons2.svg#icon-email"></use>
+              </svg>
+            </div>
+          </div>
+
+          <div class="form-field comment">
+            <label class="form-label" for="user-comment">Comment</label>
+            <textarea
+              id="user-comment"
+              class="form-comment"
+              name="user-comment"
+              placeholder="Text input"
+            >
+            </textarea>
+          </div>
+
+          <div class="form-field privacy">
+            <input
+              class="form-check item-hidden"
+              type="checkbox"
+              name="user-privacy"
+              value="true"
+              id="user-privacy"
+            />
+            <label class="check-text" for="user-privacy">
+              <span class="check-span">
+                <svg class="tick" width="10" height="8">
+                  <use href="./images/icons3.svg#icon-Vector"></use>
+                </svg>
+              </span>
+              I accept the terms and conditions of the
+              <a href="" class="link-privacy">Privacy Policy</a>
+            </label>
+          </div>
+
+          <button class="submit-button" type="submit">Send</button>
+        </form>
+      </div>
+    </div>
   </body>
 </html>
