--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
       </section>
       <section class="second-page">
         <div class="container">
-          <h2 class="item-hidden">Advantage and style</h2>
+          <h2 class="visually-hidden">Advantage and style</h2>
           <ul class="second-link">
             <li class="link-paragraph">
               <div class="icon-features">
@@ -483,7 +483,7 @@
       </div>
     </footer>
 
-    <div class="modal-overlay is-open">
+    <div class="modal-overlay">
       <div class="modal">
         <button class="exit-button" type="button">
           <svg class="exit-icon" width="8" height="8">
@@ -560,7 +560,7 @@
 
           <div class="form-field privacy">
             <input
-              class="form-check item-hidden"
+              class="form-check visually-hidden"
               type="checkbox"
               name="user-privacy"
               value="true"
