--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <!----------- Header --------------->
 
     <header class="header">
-      <div class="header-container">
+      <div class="container header-container">
         <nav class="navigation">
           <!---------- Logo ------------->
 
@@ -46,7 +46,7 @@
         </nav>
 
         <address class="address">
-          <ul class="adress-list">
+          <ul class="address-list">
             <li class="address-link">
               <a class="address-contacts-color" href="mailto:info@devstudio.com"
                 >info@devstudio.com</a
@@ -68,7 +68,7 @@
 
       <!----------- Mobile menu -------------->
 
-      <div class="mobile-menu visually-hidden">
+      <div class="mobile-menu">
         <button class="modal-close-btn" type="button">
           <svg class="modal-close-btn-icon" width="8" height="8">
             <use href="./images/icons.svg#icon-close-black"></use>
@@ -401,19 +401,25 @@
             <li class="portfolio-cards">
               <div class="overlay-container">
                 <picture>
-                  <sourse
-                    srcset=" ./images/project-card1-desk-1x.jpg 1x,
-                  ./images/project-card1.jpg 2x "
+                  <source
+                    srcset="
+                      ./images/project-card1-desk-1x.jpg 1x,
+                      ./images/project-card1.jpg         2x
+                    "
                     media="(min-width: 1158px)"
                   />
-                  <sourse
-                    srcset=" ./images/project-card1-tab-1x.jpg 1x,
-                  ./images/project-card1-tab-2x.jpg 2x "
+                  <source
+                    srcset="
+                      ./images/project-card1-tab-1x.jpg 1x,
+                      ./images/project-card1-tab-2x.jpg 2x
+                    "
                     media="(min-width: 768px)"
                   />
-                  <sourse
-                    srcset=" ./images/project-card1-1x.jpg 1x,
-                  ./images/project-card1-2x.jpg 2x "
+                  <source
+                    srcset="
+                      ./images/project-card1-1x.jpg 1x,
+                      ./images/project-card1-2x.jpg 2x
+                    "
                     media="(max-width: 767px)"
                   />
                   <img
@@ -436,22 +442,26 @@
             <li class="portfolio-cards">
               <div class="overlay-container">
                 <picture>
-                  <sourse
-                    srcset=" ./images/project-card2-desk-1x.jpg 1x,
-                  ./images/project-card2.jpg 2x "
+                  <source
+                    srcset="
+                      ./images/project-card2-desk-1x.jpg 1x,
+                      ./images/project-card2.jpg         2x
+                    "
                     media="(min-width: 1158px)"
                   />
-                  <sourse
-                    srcset=" ./images/project-card2-tab-1x.jpg 1x,
-                  ./images/project-card2-tab-2x.jpg 2x "
+                  <source
+                    srcset="
+                      ./images/project-card2-tab-1x.jpg 1x,
+                      ./images/project-card2-tab-2x.jpg 2x
+                    "
                     media="(min-width:
                   768px)"
                   />
-                  <sourse
+                  <source
                     srcset="
-                    ./images/project-card2-1x.jpg 1x,
-                    ./images/project-card2-2x.jpg 2x
-                  "
+                      ./images/project-card2-1x.jpg 1x,
+                      ./images/project-card2-2x.jpg 2x
+                    "
                     media="(max-width: 767px)"
                   />
                   <img
@@ -474,22 +484,26 @@
             <li class="portfolio-cards">
               <div class="overlay-container">
                 <picture>
-                  <sourse
-                    srcset=" ./images/project-card3-desk-1x.jpg 1x,
-                  ./images/project-card3.jpg 2x "
+                  <source
+                    srcset="
+                      ./images/project-card3-desk-1x.jpg 1x,
+                      ./images/project-card3.jpg         2x
+                    "
                     media="(min-width: 1158px)"
                   />
-                  <sourse
-                    srcset=" ./images/project-card3-tab-1x.jpg 1x,
-                  ./images/project-card3-tab-2x.jpg 2x "
+                  <source
+                    srcset="
+                      ./images/project-card3-tab-1x.jpg 1x,
+                      ./images/project-card3-tab-2x.jpg 2x
+                    "
                     media="(min-width:
                   768px)"
                   />
-                  <sourse
+                  <source
                     srcset="
-                    ./images/project-card3-1x.jpg 1x,
-                    ./images/project-card3-2x.jpg 2x
-                  "
+                      ./images/project-card3-1x.jpg 1x,
+                      ./images/project-card3-2x.jpg 2x
+                    "
                     media="(max-width: 767px)"
                   />
                   <img
@@ -515,22 +529,26 @@
             <li class="portfolio-cards">
               <div class="overlay-container">
                 <picture>
-                  <sourse
-                    srcset=" ./images/project-card4-desk-1x.jpg 1x,
-                  ./images/project-card4.jpg 2x "
+                  <source
+                    srcset="
+                      ./images/project-card4-desk-1x.jpg 1x,
+                      ./images/project-card4.jpg         2x
+                    "
                     media="(min-width: 1158px)"
                   />
-                  <sourse
-                    srcset=" ./images/project-card4-tab-1x.jpg 1x,
-                  ./images/project-card4-tab-2x.jpg 2x "
+                  <source
+                    srcset="
+                      ./images/project-card4-tab-1x.jpg 1x,
+                      ./images/project-card4-tab-2x.jpg 2x
+                    "
                     media="(min-width:
                   768px)"
                   />
-                  <sourse
+                  <source
                     srcset="
-                    ./images/project-card4-1x.jpg 1x,
-                    ./images/project-card4-2x.jpg 2x
-                  "
+                      ./images/project-card4-1x.jpg 1x,
+                      ./images/project-card4-2x.jpg 2x
+                    "
                     media="(max-width: 767px)"
                   />
                   <img
@@ -553,22 +571,26 @@
             <li class="portfolio-cards">
               <div class="overlay-container">
                 <picture>
-                  <sourse
-                    srcset=" ./images/project-card5-desk-1x.jpg 1x,
-                  ./images/project-card5.jpg 2x "
+                  <source
+                    srcset="
+                      ./images/project-card5-desk-1x.jpg 1x,
+                      ./images/project-card5.jpg         2x
+                    "
                     media="(min-width: 1158px)"
                   />
-                  <sourse
-                    srcset=" ./images/project-card5-tab-1x.jpg 1x,
-                  ./images/project-card5-tab-2x.jpg 2x "
+                  <source
+                    srcset="
+                      ./images/project-card5-tab-1x.jpg 1x,
+                      ./images/project-card5-tab-2x.jpg 2x
+                    "
                     media="(min-width:
                   768px)"
                   />
-                  <sourse
+                  <source
                     srcset="
-                    ./images/project-card5-1x.jpg 1x,
-                    ./images/project-card5-2x.jpg 2x
-                  "
+                      ./images/project-card5-1x.jpg 1x,
+                      ./images/project-card5-2x.jpg 2x
+                    "
                     media="(max-width: 767px)"
                   />
                   <img
@@ -591,22 +613,26 @@
             <li class="portfolio-cards">
               <div class="overlay-container">
                 <picture>
-                  <sourse
-                    srcset=" ./images/project-card6-desk-1x.jpg 1x,
-                  ./images/project-card6.jpg 2x "
+                  <source
+                    srcset="
+                      ./images/project-card6-desk-1x.jpg 1x,
+                      ./images/project-card6.jpg         2x
+                    "
                     media="(min-width: 1158px)"
                   />
-                  <sourse
-                    srcset=" ./images/project-card6-tab-1x.jpg 1x,
-                  ./images/project-card6-tab-2x.jpg 2x "
+                  <source
+                    srcset="
+                      ./images/project-card6-tab-1x.jpg 1x,
+                      ./images/project-card6-tab-2x.jpg 2x
+                    "
                     media="(min-width:
                   768px)"
                   />
-                  <sourse
+                  <source
                     srcset="
-                    ./images/project-card6-1x.jpg 1x,
-                    ./images/project-card6-2x.jpg 2x
-                  "
+                      ./images/project-card6-1x.jpg 1x,
+                      ./images/project-card6-2x.jpg 2x
+                    "
                     media="(max-width: 767px)"
                   />
                   <img
@@ -634,7 +660,7 @@
     <!------------------- Footer ------------------------->
 
     <footer class="footer-bg">
-      <div class="container-footer">
+      <div class="container container-footer">
         <div class="logo-social">
           <div class="container-footer-logo">
             <a class="footer-logo" href="./index.html"
@@ -703,7 +729,7 @@
 
     <!------------------- Modal ---------------------->
 
-    <div class="backdrop backdrop-mobile-modal backdrop-tablet visually-hidden">
+    <div class="backdrop backdrop-mobile-modal backdrop-tablet">
       <div class="modal modal-mob modal-tablet">
         <button class="modal-btn modal-btn-mob" type="button">
           <svg class="modal-btn-icon mob" width="8" height="8">
